<resources>
    <string name="app_name">Final Project</string>
    <string name="main_screen">Home Page</string>
    <string name="character_creator">Character Creation</string>
    <string name="profile_screen">Character Profile</string>
    <string name="item_screen">Items Menu</string>
    <string name="dice_roller">Dice Roller</string>
    <string name ="roll">Roll</string>
    <string name="name_1">Bob</string>
    <string name="name_2">John</string>
    <string name="name_3">Annie</string>
    <string name="name_4">Alex</string>
    <string name="name_5">Rose</string>
    <string name="label_name">Name</string>
    <string name="placeholder_enter_name">Enter your adventurer\'s name</string>
    <string name="placeholder_select_class">Select your class</string>
    <string name="label_class">Class</string>
    <string name="placeholder_select_race">Select your character\'s race</string>
    <string name="label_race">Race</string>
    <string name="placeholder_char_desc">\"Enter a backstory for your adventurer.\"</string>
    <string name="label_char_desc">Character Description</string>
    <string name="attr_strength">Strength</string>
    <string name="attr_constitution">Constitution</string>
    <string name="attr_strength_desc">Your hero\'s physical might!</string>
    <string name="attr_constitution_desc">Your hero\'s resistence to ailments.</string>
    <string name="attr_dexterity">Dexterity</string>
    <string name="attr_dexterity_desc">Describes how nimble your hero is.</string>
    <string name="placeholder_select_level">Your character\'s level</string>
    <string name="label_level">Level</string>
    <string name="placeholder_select_xp">Your character\'s XP</string>
    <string name="label_XP">XP</string>
    <string name="button_submit">Add Character</string>
    <string name="attr_intelligence">Intelligence</string>
    <string name="attr_intelligence_desc">Your Hero\'s smarts</string>
    <string name="attr_wisdom">Wisdom</string>
    <string name="attr_wisdom_desc">Your hero\'s reasoning and awareness</string>
    <string name="attr_charisma">Charisma</string>
    <string name="attr_charisma_desc">Your hero\'s inherent charm.</string>
    <string name="placeholder_enter_hp">"Enter your character's maximun health points "</string>
    <string name="label_max_hp">Maximum HP</string>
    <string name="send_to_creator">Send to Character Creator</string>
    <string name="placeholder_select_image">Select an image</string>
</resources>